crates/solite-cli/src/commands/codegen/snapshots/solite_cli__commands__codegen__tests__simple_export.snap
---
source: crates/solite-cli/src/commands/codegen/mod.rs
expression: "report(\"-- name: xxx\\nselect 1, 2, 3;\")"
snapshot_kind: text
---
setup: []
exports:
  - name: xxx
    result_type: Rows
    sql: "select 1, 2, 3;"
    parameters: []
    columns:
      - name: "1"
        origin_database: ~
        origin_table: ~
        origin_column: ~
        decltype: ~
        nullable: ~
      - name: "2"
        origin_database: ~
        origin_table: ~
        origin_column: ~
        decltype: ~
        nullable: ~
      - name: "3"
        origin_database: ~
        origin_table: ~
        origin_column: ~
        decltype: ~
        nullable: ~
    result_class: ~
